feat: complete feature implementation
Rate Limiting:
- Add tiered rate limiting middleware (rate-limit-tiers.ts)
- Tiers: anonymous (50), blackbox (200), controlbox (500), bundle (1000), admin (2000)
- Include 10 unit tests for tier detection

Trust System:
- Add confidence gating to classification-engine.ts
- Suppress explanations below CONFIDENCE_GATE_THRESHOLD (default 0.6)
- Add env var documentation to .env.example

Dashboard Tests:
- Set up Vitest + React Testing Library
- Add RaceEngineerFeed.test.tsx, Header.test.tsx, ProtectedRoute.test.tsx

Squarespace:
- Add requireAuth middleware to resolve-pending endpoint
- Add admin role check for billing operations
- Add billing-squarespace.test.ts (11 tests)

Total: 217 tests passing (21 new)

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,6 @@ IRACING_PASSWORD=your-iracing-password
 # Development
 LOG_LEVEL=INFO
 POLL_RATE_HZ=10
+
+# Trust System
+CONFIDENCE_GATE_THRESHOLD=0.6
