--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -8,6 +8,9 @@
         "build": "tsc && vite build",
         "preview": "vite preview",
         "typecheck": "tsc --noEmit",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:coverage": "vitest run --coverage",
         "test:e2e": "playwright test",
         "test:e2e:ui": "playwright test --ui",
         "test:e2e:headed": "playwright test --headed"
@@ -23,13 +26,18 @@
     },
     "devDependencies": {
         "@playwright/test": "^1.57.0",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.1",
         "@types/react": "^18.2.45",
         "@types/react-dom": "^18.2.17",
         "@vitejs/plugin-react": "^4.2.1",
+        "@vitest/coverage-v8": "^4.0.16",
         "autoprefixer": "^10.4.16",
+        "jsdom": "^27.4.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
         "typescript": "^5.3.3",
-        "vite": "^5.0.10"
+        "vite": "^5.0.10",
+        "vitest": "^4.0.16"
     }
 }
