--- a/apps/relay/package.json
+++ b/apps/relay/package.json
@@ -20,6 +20,7 @@
         "files": [
             "dist/**/*",
             "assets/**/*",
+            "python/**/*",
             "package.json"
         ],
         "directories": {
@@ -70,6 +71,7 @@
         "@types/node": "^20.10.0",
         "electron": "^28.0.0",
         "electron-builder": "^24.9.1",
+        "electron-packager": "^17.1.2",
         "typescript": "^5.3.0"
     }
 }
