fix: TypeScript build errors for production deployment
Dashboard fixes:
- DriverProfilePage: null checks for perf metrics, removed unused imports
- TeamEvents, TeamHome, TeamPlanning, TeamPractice, TeamSetups, TeamStrategy: removed unused imports

Server fixes:
- driver-development.ts: fixed import path and Express return types
- detector.ts: removed unused session parameter
- generator.ts: prefixed unused benchmark parameter

Both dashboard and server now build successfully.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "controlbox",
-    "version": "0.1.0-alpha",
+    "version": "1.0.0-rc1",
     "description": "Autonomous Race Control System for Online Leagues",
     "private": true,
     "workspaces": [
