--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@controlbox/dashboard",
-    "version": "0.1.0-alpha",
+    "version": "1.0.0-rc1",
     "description": "ControlBox Race Control Dashboard",
     "type": "module",
     "scripts": {
@@ -18,6 +18,7 @@
     "dependencies": {
         "@controlbox/common": "*",
         "date-fns": "^4.1.0",
+        "lucide-react": "^0.562.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.21.1",
