--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -67,6 +67,10 @@ services:
       OPS_UI_ENABLED: "0"
       BUILD_TIME: ${BUILD_TIME}
       GIT_SHA: ${GIT_SHA}
+      # iRacing OAuth
+      IRACING_CLIENT_ID: ${IRACING_CLIENT_ID}
+      IRACING_CLIENT_SECRET: ${IRACING_CLIENT_SECRET}
+      IRACING_TOKEN_ENCRYPTION_KEY: ${IRACING_TOKEN_ENCRYPTION_KEY}
     depends_on:
       postgres:
         condition: service_healthy
