[MAC] Stripe billing hardening, IDP enhancements, WebSocket refactor, workflow files for cross-machine dev
Features:
- Stripe billing integration (config, service, webhooks, portal)
- IDP pipeline service for post-session processing
- Driver racecraft stats API and dashboard visualization
- Rate limiting for API and WebSocket
- WebSocket refactored (AuthGate, RoomManager, SessionHandler, TelemetryHandler, BroadcastHandler)

Tooling:
- Development environment tracking (DEVELOPMENT_ENVIRONMENTS.md)
- Workflow files for Mac/PC setup (/mac-setup, /pc-setup)
- Relay and E2E test workflows
- Code reference export tool

Documentation:
- STRIPE_CONFIG.md - Stripe setup guide
- RATE_LIMITS.md - Rate limiting documentation
- PROJECT-STRUCTURE.md - Updated to current state
- Verification appendices for WebSocket and rate limits

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "private": true,
     "workspaces": [
         "packages/*",
-        "tools/*"
+        "tools/*",
+        "apps/*"
     ],
     "scripts": {
         "build": "npm run build --workspaces",
@@ -16,7 +17,9 @@
         "lint": "npm run lint --workspaces --if-present",
         "typecheck": "npm run typecheck --workspaces --if-present",
         "db:migrate": "npm run migrate --workspace=packages/server",
-        "clean": "rm -rf node_modules packages/*/node_modules packages/*/dist tools/*/node_modules tools/*/dist"
+        "clean": "rm -rf node_modules packages/*/node_modules packages/*/dist tools/*/node_modules tools/*/dist",
+        "export:reference": "npx tsx tools/export-reference.ts",
+        "export:reference:watch": "npx tsx tools/export-reference.ts --watch"
     },
     "engines": {
         "node": ">=20.0.0"
