--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ apps/relay/python-embed/
 # Docker volumes (if local)
 postgres_data/
 redis_data/
+
+# Reference Exports
+okboxbox_exports/
+okboxbox_code_reference.md
