--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -36,6 +36,7 @@
         "prom-client": "^15.1.3",
         "redis": "^4.6.10",
         "socket.io": "^4.7.2",
+        "stripe": "^20.2.0",
         "uuid": "^9.0.1",
         "zod": "^3.22.4"
     },
@@ -43,7 +44,6 @@
         "@types/bcrypt": "^6.0.0",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
-        "@types/jest": "^30.0.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/morgan": "^1.9.9",
         "@types/node": "^20.10.5",
@@ -51,8 +51,6 @@
         "@types/pg": "^8.10.9",
         "@types/uuid": "^9.0.7",
         "@vitest/coverage-v8": "^4.0.16",
-        "jest": "^29.7.0",
-        "ts-jest": "^29.4.6",
         "tsx": "^4.7.0",
         "typescript": "^5.3.3",
         "vitest": "^4.0.16"
