--- a/apps/relay/package.json
+++ b/apps/relay/package.json
@@ -2,7 +2,7 @@
     "name": "@okboxbox/relay",
     "version": "1.0.0-alpha",
     "description": "Ok, Box Box Relay Agent - Desktop app for telemetry uplink and Driver HUD",
-    "main": "dist/main.js",
+    "main": "dist/main-simple.js",
     "private": true,
     "scripts": {
         "dev": "npm run build && electron .",
@@ -75,6 +75,7 @@
         ]
     },
     "dependencies": {
+        "auto-launch": "^5.0.6",
         "electron-store": "^8.2.0",
         "node-fetch": "^3.3.2",
         "socket.io-client": "^4.8.1"
