--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -66,5 +66,5 @@ EXPOSE 8080
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD wget --no-verbose --tries=1 --spider http://localhost:8080/api/health || exit 1
 
-# Start server
-CMD ["node", "dist/index.js"]
+# Start server - use standalone for relay telemetry (no DB required)
+CMD ["node", "dist/standalone.js"]
