--- a/apps/relay/package.json
+++ b/apps/relay/package.json
@@ -12,7 +12,7 @@
         "package:win": "npm run build && electron-builder --win",
         "package:mac": "npm run build && electron-builder --mac",
         "package:linux": "npm run build && electron-builder --linux",
-        "postinstall": "electron-builder install-app-deps"
+        "postinstall": "node -e \"try{require('electron')}catch(e){process.exit(0)}\" && electron-builder install-app-deps || true"
     },
     "build": {
         "appId": "com.okboxbox.relay",
