Implement Driver Tier: routes, layout, home, pitwall, HUD, voice scaffolds

--- a/apps/app/.env.example
+++ b/apps/app/.env.example
@@ -2,3 +2,7 @@
 # Get these values from your Supabase project settings -> API
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key-here
+
+# Relay Mock Mode
+# Set to 'true' to simulate relay connection with fake telemetry data
+VITE_RELAY_MOCK=true
