Wire up real API integration for IDP with fallback to demo data

--- a/apps/app/.env.example
+++ b/apps/app/.env.example
@@ -3,6 +3,10 @@
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key-here
 
+# API Server URL
+# The backend server that handles iRacing data sync and IDP
+VITE_API_URL=http://localhost:3001
+
 # Relay Mock Mode
 # Set to 'true' to simulate relay connection with fake telemetry data
 VITE_RELAY_MOCK=true
