Add Rive track map system with SVG fallback - integrated into all crew data panels

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -10,11 +10,12 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@rive-app/react-canvas": "^4.26.1",
     "@supabase/supabase-js": "^2.39.0",
+    "lucide-react": "^0.300.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
-    "lucide-react": "^0.300.0"
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
