--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@rive-app/react-canvas": "^4.26.1",
     "@supabase/supabase-js": "^2.39.0",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.300.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
