feat: add Supabase JWT auth bridge for apps/app frontend
- Add JWKS-based Supabase token verification (ECC P-256 support) via jose library
- Fallback to HS256 shared secret for legacy Supabase projects
- Auto-provision admin_users rows for Supabase-authenticated users
- Update requireAuth and optionalAuth middleware with async Supabase fallback
- Add SUPABASE_URL and SUPABASE_JWT_SECRET to DO app.yaml
- Fix frontend IDP error logging (empty {} -> actual error messages)

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -54,6 +54,12 @@ services:
       - key: JWT_SECRET
         scope: RUN_TIME
         type: SECRET
+      - key: SUPABASE_JWT_SECRET
+        scope: RUN_TIME
+        type: SECRET
+      - key: SUPABASE_URL
+        scope: RUN_TIME
+        value: "${SUPABASE_URL}"
       
       # CORS - Allow dashboard and relay origins
       - key: CORS_ORIGINS
