--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,6 +26,7 @@
         "express": "^4.22.1",
         "express-rate-limit": "^8.2.1",
         "helmet": "^7.1.0",
+        "jose": "^6.1.3",
         "jsonwebtoken": "^9.0.3",
         "morgan": "^1.10.0",
         "openai": "^6.16.0",
